# wallet-core

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  asyncify.sh  build.rs  build.sh  dusk-wallet-core-0.21.0.wasm  package-lock.json  package.json  rust-toolchain
.cargo/: config.toml
.github/workflows/: dusk_ci.yml
assets/: dusk-wallet-core-0.21.0.wasm  dusk_wallet_core.wasm  schema.json
js/: b58.mjs  package-lock.json  package.json  wallet.mjs
js/tests/: data.mjs  env.mjs  test.mjs
js/wasm/: asyncify.mjs
js/wasm/alloc/: allocator.mjs  types.mjs
lib/wasm/: exports.js  utils.js
rust/: Makefile
rust/src/: ffi.rs
src/: ffi.rs  imp.rs  key.rs  lib.rs  tx.rs  types.rs  utils.rs
src/compat/: allow.rs  crypto.rs  mnemonic.rs  mod.rs  rkyv.rs  stake.rs  tx.rs  unstake.rs  withdraw.rs
tests/: derive_keys.rs  index.js  keys_derive.rs  mock.rs  wallet.rs
