[package]
name = "dusk-wallet-core"
version = "0.24.0-plonk.0.16-rc.0"
edition = "2021"
description = "The core functionality of the Dusk wallet"
license = "MPL-2.0"

[dependencies]
rand_core = "^0.6"
rand_chacha = { version = "^0.3", default-features = false }
sha2 = { version = "^0.10", default-features = false }
phoenix-core = { version = "0.21", default-features = false, features = ["alloc", "rkyv-impl"] }
dusk-pki = { version = "0.13", default-features = false }
dusk-bytes = "^0.1"
dusk-schnorr = { version = "0.14", default-features = false }
dusk-jubjub = { version = "0.13", default-features = false }
dusk-poseidon = { version = "0.31", default-features = false }
poseidon-merkle = { version = "0.3", features = ["rkyv-impl"] }
dusk-plonk = { version = "0.16", default-features = false }
rusk-abi = { version = "0.12.0-rc", default-features = false }
dusk-bls12_381-sign = { version = "0.5", default-features = false }
rkyv = { version = "0.7", default-features = false }
ff = { version = "0.13", default-features = false }

stake-contract-types = "0.0.1-rc.1"

[dev-dependencies]
rand = "^0.8"

[lib]
crate-type = ["cdylib", "rlib"]
