[package]
name = "dusk-wallet-core"
version = "0.24.0-plonk.0.16-rc.2"
edition = "2021"
description = "The core functionality of the Dusk wallet"
license = "MPL-2.0"

[dependencies]
rand_core = "^0.6"
rand_chacha = { version = "^0.3", default-features = false }
sha2 = { version = "^0.10", default-features = false }
phoenix-core = { version = "0.26", default-features = false, features = ["alloc", "rkyv-impl"] }
dusk-bytes = "^0.1"
jubjub-schnorr = { version = "0.2", default-features = false, features = ["double"] }
dusk-jubjub = { version = "0.14", default-features = false }
dusk-poseidon = { version = "0.33", default-features = false }
poseidon-merkle = { version = "0.5", features = ["rkyv-impl"] }
dusk-plonk = { version = "0.19", default-features = false }
bls12_381-bls = { version = "0.2", default-features = false }
rkyv = { version = "0.7", default-features = false }
ff = { version = "0.13", default-features = false }

# rusk dependencies
rusk-abi = { version = "0.13.0-rc", default-features = false }
stake-contract-types = "0.1.0-rc"

[dev-dependencies]
rand = "^0.8"

[lib]
crate-type = ["cdylib", "rlib"]
